# vrpc

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  build.bat  build.ps1  build.py  mypy.ini  requirements.dev.txt  requirements.txt  scratch.md  setup.cfg  setup.py
.devcontainer/: devcontainer.json
proto_dump/: person.pb  person.protobuf
tests/: test_cv2_resize.py  test_producer.py  test_proto.py
vrpc/: __main__.py  consumer.py  fsb_queue.py  fsb_queue1.py  fsb_queue_producer.py  logging.yaml  main.py  main2.py  producer.py  producer1.py  setup.cfg  utils.py  utils_config_parser.py
vrpc/data_models/: converter.py  data.py  function_pkg.py  opencv.py  person_pkg.py
vrpc/data_models/data/: __init__.py
vrpc/data_models/interfaces/: function_types.proto  object_info_with_images.proto  opencv.proto  person.proto  person_info.proto  persons.proto  seek_info.proto
vrpc_cpp/: CMakeLists.txt
vrpc_cpp/inc/: fsb_queue_consumer.hpp  vrpc.hpp
vrpc_cpp/src/: fsb_queue_consumer.cpp  fsb_queue_tester.cpp
